added slider to research and client center

--- a/about-overview.html
+++ b/about-overview.html
@@ -56,8 +56,7 @@
             <div class="corzo-mobile-menu-right">
 
                 <div class="corzo-mobile-menu">
-                    <a class="corzo-mm-menu-button corzo-mobile-menu-button corzo-mobile-button-hamburger"
-                       href="#corzo-mobile-menu"><span></span></a>
+                    <a class="corzo-mm-menu-button corzo-mobile-menu-button corzo-mobile-button-hamburger" href="#corzo-mobile-menu"><span></span></a>
                     <div class="corzo-mm-menu-wrap corzo-navigation-font" id="corzo-mobile-menu" data-slide="right">
                         <ul id="menu-main-navigation" class="m-menu">
                             <li class="menu-item menu-item-home menu-item-has-children">
@@ -88,16 +87,17 @@
                             <!--                                    </li>-->
 
                             <li class="menu-item menu-item-has-children">
-                                <a href="faq.html">Client Center</a>
+                                <a href="research-center.html">Research Center</a>
+                            </li>
+                            <li class="menu-item menu-item-has-children">
+                                <a href="client-center.html">Client Center</a>
                             </li>
 
                             <!--    <li class="menu-item menu-item-has-children">-->
                             <!--                                        <a href="faq.html">FAQs</a>-->
                             <!--                                    </li>-->
 
-                            <li class="menu-item menu-item-has-children">
-                                <a href="smart-manufacturing.html">Research</a>
-                            </li>
+
 
                             <li class="menu-item menu-item-has-children">
                                 <a href="contact-3.html">Contact Us</a>
