--- a/asset-management.html
+++ b/asset-management.html
@@ -82,12 +82,14 @@
 <!--                                            <li class="menu-item"><a href="#">Investment Research</a></li>-->
 <!--                                        </ul>-->
 <!--                                    </li>-->
+
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="faq.html">Client Center</a>
+                                        <a href="research-center.html">Research Center</a>
                                     </li>
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="smart-manufacturing.html">Research</a>
+                                        <a href="client-center.html">Client Center</a>
                                     </li>
+
 
 <!--                                    <li class="menu-item menu-item-has-children">-->
 <!--                                        <a href="faq.html">FAQs</a>-->
@@ -187,7 +189,6 @@
                                                     <li class="menu-item" data-size="60"><a href="insurance.html">Strategic Advisory</a></li>
                                                     <li class="menu-item" data-size="60"><a href="risk-management.html">Investment Advisory</a></li>
                                                     <li class="menu-item" data-size="60"><a href="private-equity-2.html">Private Equity</a></li>
-
                                                 </ul>
                                             </li>
 <!--                                            <li class="menu-item menu-item-has-children corzo-normal-menu">-->
@@ -199,17 +200,18 @@
 <!--                                            </li>-->
 
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>Client Center</a>
+                                                <a href="research-center.html" class="sf-with-ul-pre">
+                                                    <span class="corzo-menu-item-description">04</span>Research Center</a>
+                                            </li>
+                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
+                                                <a href="client-center.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>Client Center</a>
                                             </li>
 
                                             <!--  <li class="menu-item menu-item-has-children corzo-normal-menu">-->
 <!--                                                <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQs</a>-->
 <!--                                            </li>-->
 
-                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="contact-3.html" class="sf-with-ul-pre">
-                                                <span class="corzo-menu-item-description">05</span>Reseach </a>
-                                            </li>
+
                                         </ul>
                                         <div class="corzo-navigation-slide-bar corzo-navigation-slide-bar-style-dot" data-size-offset="0" id="corzo-navigation-slide-bar"></div>
                                     </div>
