--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <!--                            </li>-->
 
                             <li class="menu-item menu-item-has-children">
-                                <a href="smart-manufacturing.html">Research Center</a>
+                                <a href="research-center.html">Research Center</a>
                             </li>
                             <li class="menu-item menu-item-has-children">
                                 <a href="client-center.html">Client Portal</a>
@@ -226,7 +226,7 @@
                                     <!--                                    </li>-->
 
                                     <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                        <a href="smart-manufacturing.html" class="sf-with-ul-pre">
+                                        <a href="research-center.html" class="sf-with-ul-pre">
                                             <span class="corzo-menu-item-description">04</span>Research Center
                                         </a>
                                     </li>
