--- a/merge-acquisition.html
+++ b/merge-acquisition.html
@@ -60,7 +60,7 @@
                                         <a href="index.html" aria-current="page">Home</a>
                                     </li>
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="about.html">Corporate Profile</a>
+                                        <a href="about.html">Corporate </a>
 
                                     </li>
                                     <li class="menu-item menu-item-has-children">
@@ -84,10 +84,11 @@
 <!--                                    </li>-->
 
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="contact-3.html">Client Center</a>
+                                        <a href="research-center.html">Research Center</a>
                                     </li>
+
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="contact-3.html">Research</a>
+                                        <a href="client-center.html">Client Center</a>
                                     </li>
 
 <!--                                    <li class="menu-item menu-item-has-children">-->
@@ -117,7 +118,7 @@
                                     <div class="corzo-top-bar-left-text">
                                         <i class="fa fa-phone" style="font-size: 19px; color: #f7821e; margin-right: 10px;"></i>030-2500-386
                                         <i class="fa fa-clock-o" style="font-size: 19px; color: #f7821e; margin-left: 20px; margin-right: 10px;"></i>
-                                        Mon-Sat : 10:00 - 19:00
+                                        Mon-Fri : 08:00 - 17:00
                                     </div>
                                 </div>
                                 <div class="corzo-top-bar-right corzo-item-pdlr">
@@ -199,15 +200,20 @@
 <!--                                            </li>-->
 
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>Client Center</a>
+                                                <a href="research-center.html" class="sf-with-ul-pre">
+                                                    <span class="corzo-menu-item-description">04</span>Research Center
+                                                </a>
+                                            </li>
+                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
+                                                <a href="client-center.html" class="sf-with-ul-pre">
+                                                    <span class="corzo-menu-item-description">05</span>Client Center
+                                                </a>
                                             </li>
 
                                             <!--  <li class="menu-item menu-item-has-children corzo-normal-menu">-->
 <!--                                                <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQs</a>-->
 <!--                                            </li>-->
-                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="smart-manufacturing.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Research</a>
-                                            </li>
+
                                         </ul>
                                         <div class="corzo-navigation-slide-bar corzo-navigation-slide-bar-style-dot" data-size-offset="0" id="corzo-navigation-slide-bar"></div>
                                     </div>
