--- a/private-equity-2.html
+++ b/private-equity-2.html
@@ -54,15 +54,12 @@
                             <a class="corzo-mm-menu-button corzo-mobile-menu-button corzo-mobile-button-hamburger" href="#corzo-mobile-menu"><span></span></a>
                             <div class="corzo-mm-menu-wrap corzo-navigation-font" id="corzo-mobile-menu" data-slide="right">
                                 <ul id="menu-main-navigation" class="m-menu">
-                                    <li
-                                        class="menu-item menu-item-home menu-item-has-children"
-                                    >
+                                    <li class="menu-item menu-item-home menu-item-has-children">
                                         <a href="index.html" aria-current="page">Home</a>
                                     </li>
                                     <li class="menu-item menu-item-has-children">
                                         <a href="about.html">Corporate Profile</a>
-
-                                    </li>i
+                                    </li>
                                     <li class="menu-item menu-item-has-children">
                                         <a href="asset-management.html">Our Services</a>
                                         <ul class="sub-menu">
@@ -74,18 +71,26 @@
                                             <li class="menu-item"><a href="private-equity-2.html">Private Equity</a></li>
                                         </ul>
                                     </li>
+<!--                                    <li class="menu-item menu-item-has-children">-->
+<!--                                        <a href="#">Portals</a>-->
+<!--                                        <ul class="sub-menu">-->
+<!--                                            <li class="menu-item"><a href="#">Client Center</a></li>-->
+<!--                                            <li class="menu-item"><a href="#">Investment Research</a></li>-->
+<!--                                        </ul>-->
+<!--                                    </li>-->
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="#">Portals</a>
-                                        <ul class="sub-menu">
-                                            <li class="menu-item"><a href="#">Client Center</a></li>
-                                            <li class="menu-item"><a href="#">Investment Research</a></li>
-                                        </ul>
+                                        <a href="research-center.html">Research Center</a>
                                     </li>
+                                    <li class="menu-item menu-item-has-children">
+                                        <a href="client-center.html">Client Center</a>
+                                    </li>
+
 <!--                                    <li class="menu-item menu-item-has-children">-->
 <!--                                        <a href="faq.html">FAQs</a>-->
 <!--                                    </li>-->
+
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="#">Contact Us</a>
+                                        <a href="contact-3.html">Contact Us</a>
                                     </li>
                                 </ul>
                             </div>
@@ -190,15 +195,18 @@
                                             <!--                                            </li>-->
 
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>Client Center</a>
+                                                <a href="research-center.html" class="sf-with-ul-pre">
+                                                    <span class="corzo-menu-item-description">04</span>Research Center</a>
+                                            </li>
+                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
+                                                <a href="client-center.html" class="sf-with-ul-pre">
+                                                    <span class="corzo-menu-item-description">05</span>Client Center</a>
                                             </li>
 
                                             <!--  <li class="menu-item menu-item-has-children corzo-normal-menu">-->
                                             <!--                                                <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQs</a>-->
                                             <!--                                            </li>-->
-                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="smart-manufacturing.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Research</a>
-                                            </li>
+
                                         </ul>
                                         <div class="corzo-navigation-slide-bar corzo-navigation-slide-bar-style-dot" data-size-offset="0" id="corzo-navigation-slide-bar"></div>
                                     </div>
