--- a/risk-management.html
+++ b/risk-management.html
@@ -61,7 +61,7 @@
                                         <a href="about.html">Corporate Profile</a>
                                     </li>
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="asset-management.html">Our Services</a>
+                                        <a href="#">Our Services</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item"><a href="asset-management.html">Securities Trading</a></li>
                                             <li class="menu-item"><a href="merge-acquisition.html">Financings &amp; Capital Markets</a></li>
@@ -81,19 +81,18 @@
 <!--                                    </li>-->
 
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="smart-manufacturing.html">Research Center</a>
+                                        <a href="research-center.html">Research Center</a>
                                     </li>
                                     <li class="menu-item menu-item-has-children">
                                         <a href="client-center.html">Client Center</a>
                                     </li>
-
 
 <!--                                    <li class="menu-item menu-item-has-children">-->
 <!--                                        <a href="faq.html">FAQs</a>-->
 <!--                                    </li>-->
 
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="#">Contact Us</a>
+                                        <a href="contact-3.html">Contact Us</a>
                                     </li>
                                 </ul>
                             </div>
@@ -201,7 +200,8 @@
 <!--                                            </li>-->
 
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="smart-manufacturing.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Research Center</a>
+                                                <a href="research-center.html" class="sf-with-ul-pre">
+                                                    <span class="corzo-menu-item-description">04</span>Research Center</a>
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
                                                 <a href="client-center.html" class="sf-with-ul-pre">
