--- a/smart-manufacturing.html
+++ b/smart-manufacturing.html
@@ -80,7 +80,7 @@
 <!--                                    </li>-->
 
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="smart-manufacturing.html">Research Center</a>
+                                        <a href="research-center.html">Research Center</a>
                                     </li>
 
                                     <li class="menu-item menu-item-has-children">
@@ -193,16 +193,21 @@
 <!--                                                    <li class="menu-item"><a href="#">Investment Research</a></li>-->
 <!--                                                </ul>-->
 <!--                                            </li>-->
+
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="client-center.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>Client Center</a>
+                                                <a href="research-center.html" class="sf-with-ul-pre">
+                                                    <span class="corzo-menu-item-description">04</span>Research Center
+                                                </a>
                                             </li>
+                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
+                                                <a href="client-center.html" class="sf-with-ul-pre">
+                                                    <span class="corzo-menu-item-description">05</span>Client Center</a>
+                                            </li>
+
 <!--                                            <li class="menu-item menu-item-has-children corzo-normal-menu">-->
 <!--                                                <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQs</a>-->
 <!--                                            </li>-->
-                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="smart-manufacturing.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Research<a>
 
-                                            </li>
                                         </ul>
                                         <div class="corzo-navigation-slide-bar corzo-navigation-slide-bar-style-dot" data-size-offset="0" id="corzo-navigation-slide-bar"></div>
                                     </div>
