--- a/insurance.html
+++ b/insurance.html
@@ -71,20 +71,20 @@
                                             <li class="menu-item"><a href="private-equity-2.html">Private Equity</a></li>
                                         </ul>
                                     </li>
+<!--                                    <li class="menu-item menu-item-has-children">-->
+<!--                                        <a href="images.html">Portals</a>-->
+<!--                                        <ul class="sub-menu">-->
+<!--                                            <li class="menu-item"><a href="#">Client Center</a></li>-->
+<!--                                            <li class="menu-item"><a href="#">Investment Research</a></li>-->
+<!--                                        </ul>-->
+<!--                                    </li>-->
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="images.html">Portals</a>
-                                        <ul class="sub-menu">
-                                            <li class="menu-item"><a href="#">Client Center</a></li>
-                                            <li class="menu-item"><a href="#">Investment Research</a></li>
-                                        </ul>
+                                        <a href="research-center.html">Research Center</a>
+                                    </li>
+                                    <li class="menu-item menu-item-has-children">
+                                        <a href="client-center.html">Client Center</a>
                                     </li>
 
-                                    <li class="menu-item menu-item-has-children">
-                                        <a href="#">Client Center</a>
-                                    </li>
-                                    <li class="menu-item menu-item-has-children">
-                                        <a href="smart-manufacturing.html">Research</a>
-                                    </li>
 
 <!--                                    <li class="menu-item menu-item-has-children">-->
 <!--                                        <a href="faq.html">FAQs</a>-->
@@ -162,7 +162,8 @@
                                     <div class="corzo-main-menu" id="corzo-main-menu">
                                         <ul id="menu-main-navigation-1" class="sf-menu">
                                             <li class="menu-item menu-item-home menu-item-has-children corzo-normal-menu">
-                                                <a href="index.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">01</span>Home</a>
+                                                <a href="index.html" class="sf-with-ul-pre">
+                                                    <span class="corzo-menu-item-description">01</span>Home</a>
                                             </li>
 <!--                                            -->
 <!--                                            <li class="menu-item menu-item-has-children corzo-normal-menu">-->
@@ -189,20 +190,30 @@
                                                     <li class="menu-item" data-size="60"><a href="private-equity-2.html">Private Equity</a></li>
                                                 </ul>
                                             </li>
-                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="images.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Portals</a>
-                                                <ul class="sub-menu">
-                                                    <li class="menu-item"><a href="#">Client Center</a></li>
-                                                    <li class="menu-item"><a href="#">Investment Research</a></li>
-                                                </ul>
-                                            </li>
 <!--                                            <li class="menu-item menu-item-has-children corzo-normal-menu">-->
-<!--                                                <a href="contact-3.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQ</a>-->
+<!--                                                <a href="images.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Portals</a>-->
+<!--                                                <ul class="sub-menu">-->
+<!--                                                    <li class="menu-item"><a href="#">Client Center</a></li>-->
+<!--                                                    <li class="menu-item"><a href="#">Investment Research</a></li>-->
+<!--                                                </ul>-->
 <!--                                            </li>-->
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Support</a>
-
+                                                <a href="research-center.html" class="sf-with-ul-pre">
+                                                    <span class="corzo-menu-item-description">04</span>Research Center</a>
                                             </li>
+                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
+                                                <a href="client-center.html" class="sf-with-ul-pre">
+                                                    <span class="corzo-menu-item-description">05</span>Client Center
+                                                </a>
+                                            </li>
+
+                                            <!--                                            <li class="menu-item menu-item-has-children corzo-normal-menu">-->
+<!--                                                <a href="contact-3.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQ</a>-->
+<!--                                            </li>-->
+<!--                                            <li class="menu-item menu-item-has-children corzo-normal-menu">-->
+<!--                                                <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Support</a>-->
+<!--                                            </li>-->
+
                                         </ul>
                                         <div class="corzo-navigation-slide-bar corzo-navigation-slide-bar-style-dot" data-size-offset="0" id="corzo-navigation-slide-bar"></div>
                                     </div>
